--- a/css/style.css
+++ b/css/style.css
@@ -68,11 +68,18 @@ h3 {
   padding: 0.5em;
   font-weight: 500;
   text-transform: uppercase;
-  margin: 0.5em 0;
+  margin: 0.2em 0;
 }
 .btn-primary {
   background-color: #f4f4f4;
   border-radius: 10rem;
+}
+
+.btn-secondary {
+  border: 2px solid #e63946;
+  border-radius: 1.5em;
+  background-color: #ffffff;
+  color: #e63946;
 }
 
 /* ##############header background############ */
