features of the webpage

--- a/css/style.css
+++ b/css/style.css
@@ -74,12 +74,18 @@ h3 {
   background-color: #f4f4f4;
   border-radius: 10rem;
 }
+.btn-primary:hover {
+  background-color: wheat;
+}
 
 .btn-secondary {
   border: 2px solid #e63946;
   border-radius: 1.5em;
   background-color: #ffffff;
   color: #e63946;
+}
+.btn-secondary:hover {
+  background-color: wheat;
 }
 
 /* ##############header background############ */
@@ -153,8 +159,8 @@ h3 {
 }
 .row {
   height: 350px;
-
   background: #fff;
+  box-shadow: 0px 0px 20px 0px #aaa;
 }
 .row1 {
   margin-bottom: 10rem;
@@ -184,4 +190,37 @@ h3 {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.row::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+/*################## features sections #######*/
+.features {
+  padding: 10rem 0;
+}
+.box-wrapper {
+  box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.519);
+}
+.box {
+  width: 33.3333%;
+  padding: 1rem;
+  text-align: center;
+  float: left;
+}
+.box-1,
+.box-3 {
+  background: #263238;
+  color: #fff;
+}
+.box-2 {
+  background: linear-gradient(25deg, #d64c7f, #ee4758 50%);
+  color: #fff;
+}
+.box-wrapper:after {
+  content: "";
+  display: block;
+  clear: both;
 }
