--- a/css/style.css
+++ b/css/style.css
@@ -224,3 +224,13 @@ h3 {
   display: block;
   clear: both;
 }
+/* ########footer########## */
+.footer {
+  background: #263238;
+  color: #f4f4f4;
+  padding: 2rem;
+  text-align: center;
+}
+.social-media-links i {
+  margin: 2rem;
+}
