banners of about section

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,10 @@ h3 {
 
 /* #######utility classes##### */
 
+.bg-dark {
+  background: #263238;
+}
+
 .container {
   max-width: 1200px;
   width: 90%;
@@ -105,14 +109,14 @@ h3 {
   padding: 1rem;
 }
 
-.header .nav-bar .logo {
+.nav-bar .logo {
   float: left;
 }
 
-.header .nav-bar a {
+.nav-bar a {
   color: white;
 }
-.header .nav-bar .nav-item {
+.nav-bar .nav-item {
   display: inline-block;
   padding: 1rem;
 }
@@ -124,8 +128,7 @@ h3 {
   color: aqua;
   border-bottom: 2px solid #222222;
 }
-
-.header .nav-bar .nav-item {
+.nav-bar .nav-item {
   /* padding: 10px; */
   float: right;
   margin-top: 1rem;
@@ -233,4 +236,109 @@ h3 {
 }
 .social-media-links i {
   margin: 2rem;
+}
+/* ###########About page styling####### */
+.about {
+  padding: 5rem 0;
+}
+
+/* .about-heading {
+  border-bottom: 6px solid #e63946;
+} */
+.about-heading::after {
+  content: "";
+  border: 3px solid#e63946;
+  width: 100%;
+  display: block;
+}
+/* ###########about-wrapper ###########*/
+.about-wrapper {
+  /* border: 2px solid black; */
+  text-align: center;
+  margin-top: 2rem;
+}
+.about-wrapper .left {
+  float: left;
+  width: 50%;
+}
+.about-wrapper .right {
+  float: right;
+  width: 50%;
+}
+.about-wrapper::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.about-wrapper li::before {
+  content: "\2713";
+  color: #e63946;
+  font-weight: bold;
+  padding-right: 1rem;
+}
+/* ####counts styling ####*/
+.counts {
+  margin-top: 3rem;
+  /* border: 6px solid black; */
+}
+.count-item {
+  /* border: 2px solid red; */
+  width: 25%;
+  text-align: center;
+  float: left;
+}
+.counts::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.count-item span {
+  font-size: 3rem;
+  font-weight: 700;
+  color: #e63946;
+}
+.count-item p {
+  font-weight: 700;
+  color: #555;
+  font-size: 1.8rem;
+}
+
+/* ########banner styling####### */
+.cta-banner {
+  border: 2px solid red;
+  background: linear-gradient(25deg, #d64c7f, #ee4758 50%);
+  padding: 1rem;
+  box-shadow: 5px 5px 10px #000057;
+  margin-top: 3rem;
+}
+.cta-banner-left {
+  color: #f4f4f4;
+  width: 60%;
+  float: left;
+}
+.cta-banner-right {
+  text-align: right;
+  width: 40%;
+  float: right;
+}
+.cta-banner::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.cta-line {
+  font-weight: 700;
+  font-size: 2rem;
+  margin-top: 1.5Srem;
+}
+.btn-cta {
+  text-align: center;
+  display: inline-block;
+  font-weight: 700;
+  font-size: 3rem;
+  text-transform: uppercase;
+  border: 4px solid white;
+  padding: 0.3em 2.5em;
+  letter-spacing: 0.3rem;
+  color: #f4f4f4;
 }
