--- a/css/style.css
+++ b/css/style.css
@@ -342,3 +342,94 @@ h3 {
   letter-spacing: 0.3rem;
   color: #f4f4f4;
 }
+/* ############contact stylingS####### */
+.contact-form {
+  padding: 5rem 0;
+  /* font-size: 2rem; */
+  background: #f7f7f7f7;
+}
+/* .form-wrapper {
+  border: 10px solid red;
+} */
+.form-wrapper::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.form-wrapper .company-address {
+  height: 760px;
+  background: #fff;
+  /* border: 4px dotted green; */
+  width: 49%;
+  float: left;
+  padding: 1rem;
+}
+.form-wrapper .company-address {
+  display: inline-block;
+  margin-right: 1rem;
+}
+.form-wrapper .company-address h2 {
+  display: inline-block;
+  text-transform: uppercase;
+}
+.form-wrapper .address-group {
+  margin-bottom: 3rem;
+}
+.form-wrapper .company-address img {
+  width: 50%;
+  max-width: 50%;
+  min-height: 30%;
+  object-fit: cover;
+  object-position: right;
+}
+
+/* #############form-styling########## */
+
+.form h1::after {
+  content: "";
+  display: block;
+  border: 3px solid red;
+  width: 100%;
+}
+
+.form-wrapper .form {
+  height: 760px;
+  font-size: 1.6rem;
+  background: #fff;
+  /* border: 4px dotted black; */
+  width: 49%;
+  float: right;
+  padding: 1rem;
+}
+
+.form-wrapper .form label {
+  display: block;
+}
+.form-wrapper .form input {
+  padding: 0.5rem;
+  width: 100%;
+}
+.form-wrapper .form .form-group {
+  margin-bottom: 1.2rem;
+}
+.form-wrapper .form lable:after {
+  content: "*";
+  color: #e63946;
+}
+.form-wrapper .form textarea {
+  width: 100%;
+  height: 300px;
+  padding: 1rem;
+}
+.form-btn {
+  display: block;
+  margin: 0 auto;
+  padding: 0.5em 3em;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  background: #e63946;
+  color: white;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
