--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ h3 {
   color: aqua;
   border-bottom: 2px solid #222222;
 }
-.nav-bar .nav-item {
+.nav-bar .nav-items {
   /* padding: 10px; */
   float: right;
   margin-top: 1rem;
